--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,11 +5,6 @@ FROM mcr.microsoft.com/devcontainers/rust:0-1-bullseye
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
    && apt-get -y install clang lld \
    && apt-get autoremove -y && apt-get clean -y \
-   && apt-get install telnet \
-   && apt-get install apt-transport-https ca-certificates curl gnupg2 software-properties-common \
-   && curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - \
-   && add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian buster stable" \
-   && apt-get update \
-   && apt-get install docker-ce docker-ce-cli containerd.io
+   && apt-get install telnet
    
    
